--- a/BinView.xaml
+++ b/BinView.xaml
@@ -20,7 +20,7 @@
         <TextBlock x:Name="tbFileProp" Text="データサイズ" Margin="250,30,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
         <CheckBox Name="cbEndian" Content="リトルエンディアン"  Margin="0,30,100,0" Width="100" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Click="cbEndian_Click" />
         <ComboBox Name="cbDataType" Text="" Margin="0,30,10,0" Width="70" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" SelectionChanged="cbDataType_SelectionChanged" />
-        <TextBox x:Name="tbBinView" Margin="10,60,10,30" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" />
+        <TextBox x:Name="tbBinView" Margin="10,60,10,30" IsReadOnly="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" />
         <TextBlock Text="文字サイズ" Margin="5,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
         <ComboBox x:Name="cbFontSize" Margin="65,0,0,5" Width="50" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" SelectionChanged="cbFontSize_SelectionChanged" />
         <TextBlock Text="検索" Margin="130,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
