--- a/BinView.xaml
+++ b/BinView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolApp"
         mc:Ignorable="d"
-        Title="BinView" Height="450" Width="600" Closing="Window_Closing" Loaded="Window_Loaded">
+        Title="BinView" Height="450" Width="700" Closing="Window_Closing" Loaded="Window_Loaded">
     <Grid>
         <TextBlock Text="ファイルパス" Margin="5,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" />
         <ComboBox Name="cbFileSelect" Margin="80,5,80,0" VerticalAlignment="Top" MouseDoubleClick="cbFileSelect_MouseDoubleClick" SelectionChanged="cbFileSelect_SelectionChanged"
@@ -13,23 +13,37 @@
         <Button x:Name="btLoad" Content="再表示" Width="50" Margin="0,5,10,0" IsDefault="True" VerticalAlignment="Top" HorizontalAlignment="Right" Click="btLoad_Click" />
         <TextBlock Text="開始位置" Margin="5,32,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
         <TextBox x:Name="tbStart" Margin="60,30,0,0" Width="50" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left"
-                 ToolTip="16進で入力する時は0x123 の用に入力" />
+                 ToolTip="16進で入力する時は0x123のように入力、計算式も使用可能" />
         <TextBlock Text="行バイト数" Margin="120,32,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
         <TextBox x:Name="tbColCount" Margin="180,30,0,0" Width="50" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left"
-                 ToolTip="16進で入力する時は0x123 の用に入力" />
-        <TextBlock x:Name="tbFileProp" Text="データサイズ" Margin="250,30,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
-        <CheckBox Name="cbEndian" Content="リトルエンディアン"  Margin="0,33,120,0" Width="100" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Click="cbEndian_Click" />
-        <ComboBox Name="cbDataType" Text="" Margin="0,30,10,0" Width="100" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" SelectionChanged="cbDataType_SelectionChanged" />
+                 ToolTip="16進で入力する時は0x123のように入力、計算式も使用可能" />
+        <TextBlock x:Name="tbFileProp" Text="データサイズ" Margin="240,35,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        <CheckBox Name="cbEndian" Content="リトルエンディアン"  Margin="0,33,220,0" Width="100" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Click="cbEndian_Click" />
+        <TextBlock Text="データ型" Margin="0,33,150,0" VerticalAlignment="Top" HorizontalAlignment="Right" />
+        <ComboBox Name="cbDataType" Text="" Margin="0,30,60,0" Width="80" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" SelectionChanged="cbDataType_SelectionChanged" />
+        <TextBox x:Name="tbDataTypeSize" Text="サイズ" Width="40" Margin="0,33,10,0" VerticalAlignment="Top" HorizontalAlignment="Right"
+                 ToolTip="カスタムを選択したときのデータのバイト数を指定"/>
         <TextBox x:Name="tbBinView" Margin="10,60,10,30" IsReadOnly="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" />
         <TextBlock Text="文字サイズ" Margin="5,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
         <ComboBox x:Name="cbFontSize" Margin="65,0,0,5" Width="50" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" SelectionChanged="cbFontSize_SelectionChanged" />
         <TextBlock Text="検索" Margin="130,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
-        <TextBox x:Name="tbSeachText" Margin="160,0,0,5" Width="100" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left"
-                 ToolTip="連続する複数のコードは空白で区切る" />
-        <Button x:Name="btTopSearch" Content="先頭" Margin="270,0,0,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="btTopSearch_Click" />
-        <Button x:Name="btNextSearch" Content="次" Margin="310,0,0,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="btNextSearch_Click" />
-        <TextBlock x:Name="tbSearchPos" Text="位置" Margin="350,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
-        <Button x:Name="btMemo" Content="メモ" Margin="0,0,50,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="btMemo_Click" />
+        <TextBox x:Name="tbSeachText" Margin="160,0,0,5" Width="130" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left"
+                 ToolTip="検索文字の入力　連続する複数のコードを検索するときは空白で区切る。コンテキストメニューからデータ変換もできる">
+            <TextBox.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="dec→byte変換" Name="tbDec2ByteMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="byte→dec変換" Name="tbByte2DecMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="Byte反転" Name="tbReverseByteMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="度ddd.ddd→ddd mm ss(byte)" Name="tbDeg2dmsMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="度ddd.ddd→ddd mm ss ss(byte)" Name="tbDeg2dmssMenu" Click="tbSearchMenu_Click"/>
+                </ContextMenu>
+            </TextBox.ContextMenu>
+        </TextBox>
+        <Button x:Name="btTopSearch" Content="先頭" Margin="300,0,0,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="btTopSearch_Click" />
+        <Button x:Name="btNextSearch" Content="次" Margin="340,0,0,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="btNextSearch_Click" />
+        <TextBlock x:Name="tbSearchPos" Text="位置" Margin="380,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
+        <Button x:Name="btMemo" Content="メモ" Margin="0,0,50,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="btMemo_Click"
+                ToolTip="メモ用のダイヤログを表示、ダイヤログの中では計算式や10進16進変換などが使用できる"/>
         <Button x:Name="btClose" Content="終了" Margin="0,0,10,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="btClose_Click" />
     </Grid>
 </Window>
