--- a/BinView.xaml
+++ b/BinView.xaml
@@ -17,8 +17,9 @@
         <TextBlock Text="行バイト数" Margin="120,32,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
         <TextBox x:Name="tbColCount" Margin="180,30,0,0" Width="50" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left"
                  ToolTip="16進で入力する時は0x123のように入力、計算式も使用可能" />
-        <TextBlock x:Name="tbFileProp" Text="データサイズ" Margin="240,35,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" />
-        <CheckBox Name="cbEndian" Content="リトルエンディアン"  Margin="0,33,220,0" Width="100" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" Click="cbEndian_Click" />
+        <CheckBox Name="cbEndian" Content="LittleEndian"  Margin="240,33,0,0" Height="20" VerticalAlignment="Top" Click="cbEndian_Click" HorizontalAlignment="Left" Width="100" />
+        <TextBlock Text="データ構造" Margin="0,33,290,0" VerticalAlignment="Top" HorizontalAlignment="Right" />
+        <ComboBox Name="cbDataStruct" Text="" Margin="0,30,200,0" Width="80" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" SelectionChanged="cbDataType_SelectionChanged" />
         <TextBlock Text="データ型" Margin="0,33,150,0" VerticalAlignment="Top" HorizontalAlignment="Right" />
         <ComboBox Name="cbDataType" Text="" Margin="0,30,60,0" Width="80" Height="20" VerticalAlignment="Top" HorizontalAlignment="Right" SelectionChanged="cbDataType_SelectionChanged" />
         <TextBox x:Name="tbDataTypeSize" Text="サイズ" Width="40" Margin="0,33,10,0" VerticalAlignment="Top" HorizontalAlignment="Right"
@@ -31,17 +32,20 @@
                  ToolTip="検索文字の入力　連続する複数のコードを検索するときは空白で区切る。コンテキストメニューからデータ変換もできる">
             <TextBox.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="dec→byte変換" Name="tbDec2ByteMenu" Click="tbSearchMenu_Click"/>
-                    <MenuItem Header="byte→dec変換" Name="tbByte2DecMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="dec → byte変換" Name="tbDec2ByteMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="byte → dec変換" Name="tbByte2DecMenu" Click="tbSearchMenu_Click"/>
                     <MenuItem Header="Byte反転" Name="tbReverseByteMenu" Click="tbSearchMenu_Click"/>
-                    <MenuItem Header="度ddd.ddd→ddd mm ss(byte)" Name="tbDeg2dmsMenu" Click="tbSearchMenu_Click"/>
-                    <MenuItem Header="度ddd.ddd→ddd mm ss ss(byte)" Name="tbDeg2dmssMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="度ddd.ddd→ ddd mm ss(byte)" Name="tbDeg2dmsMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="度ddd.ddd→ ddd mm ss ss(byte)" Name="tbDeg2dmssMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="秒ssss → hh mm ss(byte)" Name="tbSec2hmsMenu" Click="tbSearchMenu_Click"/>
+                    <MenuItem Header="m mmmm → kk mm (byte)" Name="tbM2kkmmMenu" Click="tbSearchMenu_Click"/>
                 </ContextMenu>
             </TextBox.ContextMenu>
         </TextBox>
         <Button x:Name="btTopSearch" Content="先頭" Margin="300,0,0,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="btTopSearch_Click" />
         <Button x:Name="btNextSearch" Content="次" Margin="340,0,0,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="btNextSearch_Click" />
         <TextBlock x:Name="tbSearchPos" Text="位置" Margin="380,0,0,5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
+        <TextBlock x:Name="tbFileProp" Text="データサイズ" Margin="0,0,120,5" HorizontalAlignment="Right" Width="54" Height="20" VerticalAlignment="Bottom" />
         <Button x:Name="btMemo" Content="メモ" Margin="0,0,50,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="btMemo_Click"
                 ToolTip="メモ用のダイヤログを表示、ダイヤログの中では計算式や10進16進変換などが使用できる"/>
         <Button x:Name="btClose" Content="終了" Margin="0,0,10,5" Width="30" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="btClose_Click" />
